--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -5,7 +5,8 @@
     text-align: center;
     background: white;
     &__logo{
-            &__a{
+            &__div{
+                display: inline;
                 position: relative;
 
             }
