--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -98,7 +98,7 @@ body{
         &--explo
         {
         text-align: center;
-        padding: 0 30px 15px 30px;
+        padding: 40px 30px 15px 30px;
         font-family: "roboto", Arial, Helvetica, sans-serif;
         }
         &--commande
