--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     padding: 25px 20px;
     background-color: rgb(53, 53, 53);
+    animation: accueil-opacity 3000ms forwards;
 
     &__logo{
         height: 17px;
