--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -142,6 +142,7 @@
 .resto{
     padding: $padding-section;
     background-color: $background;
+    animation: accueil-opacity 3000ms forwards;
     &__li{
         margin-bottom: 20px;
     }
@@ -153,23 +154,23 @@
                     box-shadow: $box-shadow; 
             &__1{
                 position: relative;
-                background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;  
+                background: url(/css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;  
                 background-size: 105%;
                 background-position: center bottom;
             }
             &__2{
                 position: relative;
-                background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;  
+                background: url(/css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;  
                 background-size: cover;
                 background-position: center 60%;
             }
             &__3{
-                background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg) no-repeat;  
+                background: url(/css/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg) no-repeat;  
                 background-size: cover;
                 background-position: center 95%;
             }
             &__4{
-                background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;  
+                background: url(/css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;  
                 background-size: cover;
                 background-position: center 95%;
             }
