--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -226,6 +226,22 @@ $plat-anim-desserts: plat-anim 800ms 2200ms both;
 
 }
 
+@keyframes accueil-opacity
+{
+    0%
+    {
+        opacity: 0;
+    }
+    80%
+    {
+        opacity: 0;
+    }
+    100%
+    {
+        opacity: 1;
+    }
+}
+
 @-webkit-keyframes carte-opacity
 {
     0%
