--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -79,6 +79,7 @@
 .fonction
 {
     padding: 40px 20px 50px 30px;
+    animation: accueil-opacity 3000ms forwards;
     &__li
     {
         position: relative;
