--- a/css/main.css
+++ b/css/main.css
@@ -9,15 +9,8 @@
     transform: scale(1);
     z-index: 3;
   }
-  25% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-  }
   99% {
+    opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
     z-index: 3;
@@ -36,15 +29,8 @@
     transform: scale(1);
     z-index: 3;
   }
-  25% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-  }
   99% {
+    opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
     z-index: 3;
@@ -60,44 +46,18 @@
   0% {
     opacity: 0;
   }
-  3% {
-    opacity: 1;
-  }
-  25% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-  }
-  90% {
-    opacity: 1;
-  }
   100% {
-    opacity: 0;
+    opacity: 1;
   }
 }
 @keyframes loader-progress {
   0% {
     opacity: 0;
-  }
-  3% {
-    opacity: 1;
-  }
-  25% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 1;
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
   }
-  90% {
-    opacity: 1;
-  }
   100% {
-    opacity: 0;
+    opacity: 1;
   }
 }
 @-webkit-keyframes loader-barre {
@@ -220,6 +180,26 @@
     box-shadow: 0 3px 10px #adadad;
   }
 }
+@-webkit-keyframes accueil-opacity {
+  0% {
+    opacity: 0;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes accueil-opacity {
+  0% {
+    opacity: 0;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /* POLICES */
 /* shrikhand-regular - latin */
 @font-face {
@@ -334,7 +314,7 @@ body {
 .text--search {
   text-align: center;
   margin-bottom: 15px;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 200;
 }
 .text--fonction {
@@ -378,7 +358,11 @@ body {
   font-weight: 300;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 360px) {
+  .heading--h3--commande {
+    font-size: 1rem;
+  }
+
   .text--button {
     font-size: 0.85rem;
   }
@@ -540,6 +524,11 @@ body {
 .header__logo__img {
   max-width: 45%;
 }
+.header__logo__img--accueil {
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
+}
 .header__arrow {
   position: absolute;
   left: 25px;
@@ -557,6 +546,9 @@ body {
   -ms-flex-align: baseline;
   align-items: baseline;
   z-index: 2;
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
 }
 
 @media (min-width: 600px) {
@@ -573,8 +565,8 @@ body {
   top: 0;
   left: 0;
   background-color: white;
-  -webkit-animation: loader-page 3000ms forwards;
-  animation: loader-page 3000ms forwards;
+  -webkit-animation: loader-page 2350ms forwards;
+  animation: loader-page 2350ms forwards;
 }
 .loader__logo {
   display: -webkit-box;
@@ -585,22 +577,22 @@ body {
   justify-content: center;
   margin-top: 300px;
   margin-bottom: 40px;
-  -webkit-animation: loader-progress 2250ms 250ms both;
-  animation: loader-progress 2250ms 250ms both;
+  -webkit-animation: loader-progress 500ms both;
+  animation: loader-progress 500ms both;
 }
 .loader__progress {
   width: 80%;
   height: 30px;
   margin: auto;
   border: 1px solid #9356DC;
-  -webkit-animation: loader-progress 2250ms 250ms both;
-  animation: loader-progress 2250ms 250ms both;
+  -webkit-animation: loader-progress 500ms both;
+  animation: loader-progress 500ms both;
 }
 .loader__progress__barre {
   height: 100%;
   width: 100%;
-  background: -webkit-gradient(linear, left top, right top, from(#9356DC), to(#FF79DA));
   background: -o-linear-gradient(left, #9356DC, #FF79DA);
+  background: -webkit-gradient(linear, left top, right top, from(#9356DC), to(#FF79DA));
   background: linear-gradient(to right, #9356DC, #FF79DA);
   -webkit-transform-origin: 0% 50%;
   -ms-transform-origin: 0% 50%;
@@ -615,6 +607,9 @@ body {
   display: block;
   position: relative;
   background-color: #e9e8e8;
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
 }
 .background::before {
   content: " ";
@@ -631,11 +626,17 @@ body {
 .explo {
   padding: 40px 20px 50px 20px;
   background-color: whitesmoke;
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
 }
 
 /* SECTION FONCTION */
 .fonction {
   padding: 40px 20px 50px 30px;
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
 }
 .fonction__li {
   position: relative;
@@ -691,6 +692,9 @@ body {
 .resto {
   padding: 40px 20px 50px 20px;
   background-color: whitesmoke;
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
 }
 .resto__li {
   margin-bottom: 20px;
@@ -851,8 +855,8 @@ body {
 }
 .commande__bordure {
   width: 50%;
-  background: -webkit-gradient(linear, left top, right top, from(#99E2D0), to(#99E2D0)) no-repeat;
   background: -o-linear-gradient(left, #99E2D0, #99E2D0) no-repeat;
+  background: -webkit-gradient(linear, left top, right top, from(#99E2D0), to(#99E2D0)) no-repeat;
   background: linear-gradient(to right, #99E2D0, #99E2D0) no-repeat;
   background-size: 27% 3px;
   background-position: bottom left;
@@ -891,7 +895,7 @@ body {
   position: absolute;
   top: 38px;
   right: 0px;
-  padding-right: 30px;
+  margin-right: 25px;
   background-color: white;
   -webkit-transform: translateX(0px);
   -ms-transform: translateX(0px);
@@ -1018,6 +1022,9 @@ body {
 .footer {
   padding: 25px 20px;
   background-color: #353535;
+  opacity: 0;
+  -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+  animation: accueil-opacity 400ms 2250ms forwards;
 }
 .footer__logo {
   height: 17px;
