--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,7 +1,9 @@
 .footer{
     padding: 25px 20px;
     background-color: rgb(53, 53, 53);
-
+    opacity: 0;
+    -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+            animation: accueil-opacity 400ms 2250ms forwards;
     &__logo{
         height: 17px;
         -webkit-filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(65deg) brightness(111%) contrast(101%);
