--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,8 +7,8 @@
     top: 0;
     left: 0;
     background-color: white;
-    -webkit-animation: loader-page 3000ms forwards;
-            animation: loader-page 3000ms forwards;
+    -webkit-animation: loader-page 2350ms forwards;
+            animation: loader-page 2350ms forwards;
     &__logo
     {
         display: -webkit-box;
@@ -19,8 +19,8 @@
                 justify-content: center;
         margin-top: 300px;
         margin-bottom: 40px;
-        -webkit-animation: loader-progress 2250ms 250ms both;
-                animation: loader-progress 2250ms 250ms both;
+        -webkit-animation: loader-progress 500ms both;
+        animation: loader-progress 500ms both;
     }
     &__progress
     {
@@ -28,14 +28,14 @@
         height: 30px;
         margin: auto;
         border: 1px solid $primary-color;
-        -webkit-animation: loader-progress 2250ms 250ms both;
-                animation: loader-progress 2250ms 250ms both;
+        -webkit-animation: loader-progress 500ms both;
+                animation: loader-progress 500ms both;
         &__barre
         {
             height: 100%;
             width: 100%;
-            background: -webkit-gradient(linear, left top, right top, from($primary-color), to($secondary-color));
             background: -o-linear-gradient(left, $primary-color, $secondary-color);
+            background: -webkit-gradient(linear, left top, right top, from($primary-color), to($secondary-color));
             background: linear-gradient(to right, $primary-color, $secondary-color);
             -webkit-transform-origin: 0% 50%;
                 -ms-transform-origin: 0% 50%;
@@ -55,6 +55,9 @@
     display: block;
     position: relative;
     background-color: rgb(233, 232, 232);
+    opacity: 0;
+    -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+            animation: accueil-opacity 400ms 2250ms forwards;
     &::before
     {
         content: " ";
@@ -73,12 +76,18 @@
 .explo{
     padding: $padding-section;
     background-color: $background;
+    opacity: 0;
+    -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+            animation: accueil-opacity 400ms 2250ms forwards;
 }
 
 /* SECTION FONCTION */
 .fonction
 {
     padding: 40px 20px 50px 30px;
+    opacity: 0;
+    -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+            animation: accueil-opacity 400ms 2250ms forwards;
     &__li
     {
         position: relative;
@@ -142,6 +151,9 @@
 .resto{
     padding: $padding-section;
     background-color: $background;
+    opacity: 0;
+    -webkit-animation: accueil-opacity 400ms 2250ms forwards;
+            animation: accueil-opacity 400ms 2250ms forwards;
     &__li{
         margin-bottom: 20px;
     }
