--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -27,18 +27,9 @@ $plat-anim-desserts: plat-anim 800ms 2200ms both;
                 transform: scale(1);
         z-index: 3;
     }
-    25%
-    {
-        opacity: 1;
-    }
-    90%
-    {
-        opacity: 1;
-        -webkit-animation-timing-function: ease-in-out;
-                animation-timing-function: ease-in-out;
-    }
     99%
     {
+        opacity: 1;
         -webkit-transform: scale(1);
                 transform: scale(1);
         z-index: 3;
@@ -59,18 +50,9 @@ $plat-anim-desserts: plat-anim 800ms 2200ms both;
                 transform: scale(1);
         z-index: 3;
     }
-    25%
-    {
-        opacity: 1;
-    }
-    90%
-    {
-        opacity: 1;
-        -webkit-animation-timing-function: ease-in-out;
-                animation-timing-function: ease-in-out;
-    }
     99%
     {
+        opacity: 1;
         -webkit-transform: scale(1);
                 transform: scale(1);
         z-index: 3;
@@ -86,58 +68,29 @@ $plat-anim-desserts: plat-anim 800ms 2200ms both;
 
 @-webkit-keyframes loader-progress
 {
-    0%{
+    0%
+    {
         opacity: 0;
     }
-    3%
+    100%
     {
         opacity: 1;
     }
-    25%
-    {
-        opacity: 1;
-    }
-    50%
-    {
-        opacity: 1;
-        -webkit-animation-timing-function: ease-in-out;
-                animation-timing-function: ease-in-out;
-    }
-    90%
-    {
-        opacity: 1;
-    }
-    100%{
-        opacity: 0;
-    }
+
 
 }
 
 @keyframes loader-progress
 {
-    0%{
+    0%
+    {
         opacity: 0;
-    }
-    3%
-    {
-        opacity: 1;
-    }
-    25%
-    {
-        opacity: 1;
-    }
-    50%
-    {
-        opacity: 1;
         -webkit-animation-timing-function: ease-in-out;
                 animation-timing-function: ease-in-out;
     }
-    90%
+    100%
     {
         opacity: 1;
-    }
-    100%{
-        opacity: 0;
     }
 
 }
@@ -301,3 +254,34 @@ $plat-anim-desserts: plat-anim 800ms 2200ms both;
                 box-shadow: $box-shadow;
     }
 }
+
+@-webkit-keyframes accueil-opacity
+{
+    0%
+    {
+        opacity: 0;
+        -webkit-animation-timing-function: ease-in-out;
+                animation-timing-function: ease-in-out;
+    }
+    100%
+    {
+        opacity: 1;
+    }
+
+}
+
+@keyframes accueil-opacity
+{
+    0%
+    {
+        opacity: 0;
+        -webkit-animation-timing-function: ease-in-out;
+                animation-timing-function: ease-in-out;
+    }
+    100%
+    {
+        opacity: 1;
+    }
+
+}
+
