Bug Cover page accueil

--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -257,6 +257,10 @@
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 20px;
     }
+    .resto__a__top__1
+    {
+        background-size: cover;
+    }
 }
 
 @media (min-width: 1000px)
