--- a/css/main.css
+++ b/css/main.css
@@ -788,6 +788,10 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 20px;
   }
+
+  .resto__a__top__1 {
+    background-size: cover;
+  }
 }
 @media (min-width: 1000px) {
   .fonction {
