Pb github polices

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,13 +5,13 @@
     font-family: 'Shrikhand';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/shrikhand-v6-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('../polices/shrikhand-v6-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('/polices/shrikhand-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/polices/shrikhand-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('/polices/shrikhand-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('/polices/shrikhand-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/polices/shrikhand-v6-latin-regular.svg#Shrikhand') format('svg'); /* Legacy iOS */
+         url('../polices/shrikhand-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../polices/shrikhand-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../polices/shrikhand-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../polices/shrikhand-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../polices/shrikhand-v6-latin-regular.svg#Shrikhand') format('svg'); /* Legacy iOS */
   }
   
 /* roboto-100 - latin */
@@ -19,13 +19,13 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 100;
-    src: url('/polices/roboto-v27-latin-100.eot'); /* IE9 Compat Modes */
+    src: url('../polices/roboto-v27-latin-100.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('/polices/roboto-v27-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/polices/roboto-v27-latin-100.woff2') format('woff2'), /* Super Modern Browsers */
-         url('/polices/roboto-v27-latin-100.woff') format('woff'), /* Modern Browsers */
-         url('/polices/roboto-v27-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/polices/roboto-v27-latin-100.svg#Roboto') format('svg'); /* Legacy iOS */
+         url('../polices/roboto-v27-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../polices/roboto-v27-latin-100.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../polices/roboto-v27-latin-100.woff') format('woff'), /* Modern Browsers */
+         url('../polices/roboto-v27-latin-100.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../polices/roboto-v27-latin-100.svg#Roboto') format('svg'); /* Legacy iOS */
   }
   
   /* roboto-300 - latin */
@@ -33,13 +33,13 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 300;
-    src: url('/polices/roboto-v27-latin-300.eot'); /* IE9 Compat Modes */
+    src: url('../polices/roboto-v27-latin-300.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('/polices/roboto-v27-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/polices/roboto-v27-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-         url('/polices/roboto-v27-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('/polices/roboto-v27-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/polices/roboto-v27-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+         url('../polices/roboto-v27-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../polices/roboto-v27-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../polices/roboto-v27-latin-300.woff') format('woff'), /* Modern Browsers */
+         url('../polices/roboto-v27-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../polices/roboto-v27-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
   }
   
   /* roboto-regular - latin */
@@ -47,13 +47,13 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    src: url('/polices/roboto-v27-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('../polices/roboto-v27-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('/polices/roboto-v27-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/polices/roboto-v27-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('/polices/roboto-v27-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('/polices/roboto-v27-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/polices/roboto-v27-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+         url('../polices/roboto-v27-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../polices/roboto-v27-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../polices/roboto-v27-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../polices/roboto-v27-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../polices/roboto-v27-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
   }
 
   /* roboto-500 - latin */
@@ -61,13 +61,13 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    src: url('/polices/roboto-v27-latin-500.eot'); /* IE9 Compat Modes */
+    src: url('../polices/roboto-v27-latin-500.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('/polices/roboto-v27-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('/polices/roboto-v27-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-         url('/polices/roboto-v27-latin-500.woff') format('woff'), /* Modern Browsers */
-         url('/polices/roboto-v27-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/polices/roboto-v27-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
+         url('../polices/roboto-v27-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../polices/roboto-v27-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../polices/roboto-v27-latin-500.woff') format('woff'), /* Modern Browsers */
+         url('../polices/roboto-v27-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../polices/roboto-v27-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
   }
   
 
@@ -99,7 +99,7 @@ body{
         {
         text-align: center;
         padding: 0px 30px 15px 30px;
-        font-family: "roboto", Arial, Helvetica, sans-serif;
+        font-family: "Roboto", Arial, Helvetica, sans-serif;
         }
         &--commande
         {
