--- a/css/main.css
+++ b/css/main.css
@@ -206,9 +206,9 @@
   font-family: "Shrikhand";
   font-style: normal;
   font-weight: 400;
-  src: url("../css/polices/shrikhand-v6-latin-regular.eot");
+  src: url("../assets/polices/shrikhand-v6-latin-regular.eot");
   /* IE9 Compat Modes */
-  src: local(""), url("../css/polices/shrikhand-v6-latin-regular.eot?#iefix") format("embedded-opentype"), url("../css/polices/shrikhand-v6-latin-regular.woff2") format("woff2"), url("../css/polices/shrikhand-v6-latin-regular.woff") format("woff"), url("../css/polices/shrikhand-v6-latin-regular.ttf") format("truetype"), url("../css/polices/shrikhand-v6-latin-regular.svg#Shrikhand") format("svg");
+  src: local(""), url("../assets/polices/shrikhand-v6-latin-regular.eot?#iefix") format("embedded-opentype"), url("../assets/polices/shrikhand-v6-latin-regular.woff2") format("woff2"), url("../assets/polices/shrikhand-v6-latin-regular.woff") format("woff"), url("../assets/polices/shrikhand-v6-latin-regular.ttf") format("truetype"), url("../assets/polices/shrikhand-v6-latin-regular.svg#Shrikhand") format("svg");
   /* Legacy iOS */
 }
 /* roboto-100 - latin */
@@ -216,9 +216,9 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 100;
-  src: url("../css/polices/roboto-v27-latin-100.eot");
+  src: url("../assets/polices/roboto-v27-latin-100.eot");
   /* IE9 Compat Modes */
-  src: local(""), url("../css/polices/roboto-v27-latin-100.eot?#iefix") format("embedded-opentype"), url("../css/polices/roboto-v27-latin-100.woff2") format("woff2"), url("../css/polices/roboto-v27-latin-100.woff") format("woff"), url("../css/polices/roboto-v27-latin-100.ttf") format("truetype"), url("../css/polices/roboto-v27-latin-100.svg#Roboto") format("svg");
+  src: local(""), url("../assets/polices/roboto-v27-latin-100.eot?#iefix") format("embedded-opentype"), url("../assets/polices/roboto-v27-latin-100.woff2") format("woff2"), url("../assets/polices/roboto-v27-latin-100.woff") format("woff"), url("../assets/polices/roboto-v27-latin-100.ttf") format("truetype"), url("../assets/polices/roboto-v27-latin-100.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 /* roboto-300 - latin */
@@ -226,9 +226,9 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 300;
-  src: url("../css/polices/roboto-v27-latin-300.eot");
+  src: url("../assets/polices/roboto-v27-latin-300.eot");
   /* IE9 Compat Modes */
-  src: local(""), url("../css/polices/roboto-v27-latin-300.eot?#iefix") format("embedded-opentype"), url("../css/polices/roboto-v27-latin-300.woff2") format("woff2"), url("../css/polices/roboto-v27-latin-300.woff") format("woff"), url("../css/polices/roboto-v27-latin-300.ttf") format("truetype"), url("../css/polices/roboto-v27-latin-300.svg#Roboto") format("svg");
+  src: local(""), url("../assets/polices/roboto-v27-latin-300.eot?#iefix") format("embedded-opentype"), url("../assets/polices/roboto-v27-latin-300.woff2") format("woff2"), url("../assets/polices/roboto-v27-latin-300.woff") format("woff"), url("../assets/polices/roboto-v27-latin-300.ttf") format("truetype"), url("../assets/polices/roboto-v27-latin-300.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 /* roboto-regular - latin */
@@ -236,9 +236,9 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url("../css/polices/roboto-v27-latin-regular.eot");
+  src: url("../assets/polices/roboto-v27-latin-regular.eot");
   /* IE9 Compat Modes */
-  src: local(""), url("../css/polices/roboto-v27-latin-regular.eot?#iefix") format("embedded-opentype"), url("../css/polices/roboto-v27-latin-regular.woff2") format("woff2"), url("../css/polices/roboto-v27-latin-regular.woff") format("woff"), url("../css/polices/roboto-v27-latin-regular.ttf") format("truetype"), url("../css/polices/roboto-v27-latin-regular.svg#Roboto") format("svg");
+  src: local(""), url("../assets/polices/roboto-v27-latin-regular.eot?#iefix") format("embedded-opentype"), url("../assets/polices/roboto-v27-latin-regular.woff2") format("woff2"), url("../assets/polices/roboto-v27-latin-regular.woff") format("woff"), url("../assets/polices/roboto-v27-latin-regular.ttf") format("truetype"), url("../assets/polices/roboto-v27-latin-regular.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 /* roboto-500 - latin */
@@ -246,9 +246,9 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src: url("../css/polices/roboto-v27-latin-500.eot");
+  src: url("../assets/polices/roboto-v27-latin-500.eot");
   /* IE9 Compat Modes */
-  src: local(""), url("../css/polices/roboto-v27-latin-500.eot?#iefix") format("embedded-opentype"), url("../css/polices/roboto-v27-latin-500.woff2") format("woff2"), url("../css/polices/roboto-v27-latin-500.woff") format("woff"), url("../css/polices/roboto-v27-latin-500.ttf") format("truetype"), url("../css/polices/roboto-v27-latin-500.svg#Roboto") format("svg");
+  src: local(""), url("../assets/polices/roboto-v27-latin-500.eot?#iefix") format("embedded-opentype"), url("../assets/polices/roboto-v27-latin-500.woff2") format("woff2"), url("../assets/polices/roboto-v27-latin-500.woff") format("woff"), url("../assets/polices/roboto-v27-latin-500.ttf") format("truetype"), url("../assets/polices/roboto-v27-latin-500.svg#Roboto") format("svg");
   /* Legacy iOS */
 }
 /* GENERAL */
@@ -707,23 +707,23 @@ body {
 }
 .resto__a__top__1 {
   position: relative;
-  background: url(../css/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
+  background: url(../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) no-repeat;
   background-size: 105%;
   background-position: center bottom;
 }
 .resto__a__top__2 {
   position: relative;
-  background: url(../css/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
+  background: url(../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center 60%;
 }
 .resto__a__top__3 {
-  background: url(../css/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg) no-repeat;
+  background: url(../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg) no-repeat;
   background-size: cover;
   background-position: center 95%;
 }
 .resto__a__top__4 {
-  background: url(../css/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
+  background: url(../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) no-repeat;
   background-size: cover;
   background-position: center 95%;
 }
@@ -875,6 +875,7 @@ body {
   -webkit-box-shadow: 0 3px 10px #adadad;
   box-shadow: 0 3px 10px #adadad;
   background-color: white;
+  overflow: hidden;
 }
 .commande__li--entrees {
   -webkit-animation: plat-anim 800ms 300ms both;
