--- a/scss/layouts/_page_menu.scss
+++ b/scss/layouts/_page_menu.scss
@@ -77,6 +77,7 @@
         -webkit-box-shadow: $box-shadow;
         box-shadow: $box-shadow;
         background-color: white;
+        overflow: hidden;
 
         &--entrees {
             -webkit-animation: $plat-anim-entrees;
