--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -104,7 +104,7 @@ body{
         &--commande
         {
             display: inline-block;  
-            margin-right: 25px;
+            width: 83%;
             margin-bottom: 30px;
             font-size: 1.6rem;
         }
@@ -226,7 +226,10 @@ body{
 {
     .heading--h1--commande
         {
+        width: initial;
         margin-left: 10%;
+        margin-right: 35px;
+
         }
     .heading--h2--resto
     {
